--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 
             </div>
             <ul class="social">
-                <li><a href="https://www.linkedin.com/in/yaqeenjq" target="blank"><img src="linkedin.PNG"></a></li>
-                <li><a href="https://github.com/YaqeenAlquwaidhi" target="blank"><img src="github.PNG"></a></li>
+                <li><a href="https://www.linkedin.com/in/yaqeenjq" target="blank"><img src="linkedin.png"></a></li>
+                <li><a href="https://github.com/YaqeenAlquwaidhi" target="blank"><img src="github.png"></a></li>
             </ul>
             </nav>
         </section>
       
         <div class="about">
-            <img src="myimg.JPG">
+            <img src="myimg.jpg">
         <div class="about-txt">
             <h1>About</h1>
             <h2>Yaqeen</h2>
@@ -40,8 +40,8 @@
             <a href="mailto:yaqeen.alquwaidhi01@gmail.com" target="blank"><button>Contact me</button></a>
 
             <div class="footer-social">
-                <li><a href="https://www.linkedin.com/in/yaqeenjq" target="blank"><img src="linkedin.PNG"></a></li>
-                <li><a href="https://github.com/YaqeenAlquwaidhi" target="blank"><img src="github.PNG"></a></li>
+                <li><a href="https://www.linkedin.com/in/yaqeenjq" target="blank"><img src="linkedin.png"></a></li>
+                <li><a href="https://github.com/YaqeenAlquwaidhi" target="blank"><img src="github.png"></a></li>
 
             </div>
             <p>@Copyrights 2022 Yaqeen</p>
