--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
       
         <div class="about">
-            <img src="myimg.jpg">
+            <img src="https://github.com/YaqeenAlquwaidhi/portfolio/blob/main/myimg.jpg?raw=true">
         <div class="about-txt">
             <h1>About</h1>
             <h2>Yaqeen</h2>
