--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <div class="text">
+            <section class="text" id="home">
                 <h1>Hi</h1>
                 <h2>I'm <span>Yaqeen</span></h2>
                 <p>Front-End developer</p>
 
-            </div>
+            </section>
             <ul class="social">
                 <li><a href="https://www.linkedin.com/in/yaqeenjq" target="blank"><img src="linkedin.png"></a></li>
                 <li><a href="https://github.com/YaqeenAlquwaidhi" target="blank"><img src="github.png"></a></li>
@@ -26,15 +26,16 @@
             </nav>
         </section>
       
-        <div class="about">
+        <section id=about" class="about">
             <img src="https://github.com/YaqeenAlquwaidhi/portfolio/blob/main/myimg.jpg?raw=true">
         <div class="about-txt">
             <h1>About</h1>
             <h2>Yaqeen</h2>
             <p>Sophomore Computer Information Systems student at King Faisal University. Interested in Web Development, Cyber Security, and Business Analysis.<br>Currently, I am looking for a summer training opportunity in a learning and challenging environment, improving my skills and knowledge to be the best of my abilities and contribute positively to my personal growth. </p>
            <a href="resume.pdf" download target="blank"> <button>Download CV</button> </a>
+        </section>
         </div>
-        </div>
+<section id="contact">
         <footer>
             <h1>Yaqeen</h1>
             <a href="mailto:yaqeen.alquwaidhi01@gmail.com" target="blank"><button>Contact me</button></a>
@@ -46,5 +47,6 @@
             </div>
             <p>@Copyrights 2022 Yaqeen</p>
         </footer>
+                                                                                                      </section>
     </body>
 </html>
