--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-            <div class="text" id="home">
+            <div class="text">
                 <h1>Hi</h1>
                 <h2>I'm <span>Yaqeen</span></h2>
                 <p>Front-End developer</p>
@@ -26,7 +26,7 @@
             </nav>
         </section>
       
-        <div class="about" id="about">
+        <div class="about">
             <img src="https://github.com/YaqeenAlquwaidhi/portfolio/blob/main/myimg.jpg?raw=true">
         <div class="about-txt">
             <h1>About</h1>
@@ -35,8 +35,8 @@
            <a href="resume.pdf" download target="blank"> <button>Download CV</button> </a>
             </div>
         </div>
-<div id="contact">
-        <footer>
+
+        <footer id="contact">
             <h1>Yaqeen</h1>
             <a href="mailto:yaqeen.alquwaidhi01@gmail.com" target="blank"><button>Contact me</button></a>
 
@@ -47,7 +47,7 @@
             </div>
             <p>@Copyrights 2022 Yaqeen</p>
         </footer>
-        </div>
+       
                                                                                                       </section>
     </body>
 </html>
