--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <h1>About</h1>
             <h2>Yaqeen</h2>
             <p>Sophomore Computer Information Systems student at King Faisal University. Interested in Web Development, Cyber Security, and Business Analysis.<br>Currently, I am looking for a summer training opportunity in a learning and challenging environment, improving my skills and knowledge to be the best of my abilities and contribute positively to my personal growth. </p>
-           <a href="resume.pdf" download target="blank"> <button>Download CV</button> </a>
+           <a href="cv.pdf" download target="blank"> <button>Download CV</button> </a>
             </div>
         </div>
 
         <footer id="contact">
             <h1>Yaqeen</h1>
-            <a href="mailto:yaqeen.alquwaidhi01@gmail.com" target="blank"><button>Contact me</button></a>
+            <a href="mailto:yaqeen.jqa@gmail.com" target="blank"><button>Contact me</button></a>
 
             <div class="footer-social">
                 <li><a href="https://www.linkedin.com/in/yaqeenjq" target="blank"><img src="linkedin.png"></a></li>
