--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
         </section>
       
-        <div class="about">
+        <div class="about" id="about">
             <img src="https://github.com/YaqeenAlquwaidhi/portfolio/blob/main/myimg.jpg?raw=true">
         <div class="about-txt">
             <h1>About</h1>
