--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </nav>
         </section>
       
-        <div class="about" id="about">
+        <section class="about" id="about">
             <img src="https://github.com/YaqeenAlquwaidhi/portfolio/blob/main/myimg.jpg?raw=true">
         <div class="about-txt">
             <h1>About</h1>
@@ -34,7 +34,7 @@
             <p>Sophomore Computer Information Systems student at King Faisal University. Interested in Web Development, Cyber Security, and Business Analysis.<br>Currently, I am looking for a summer training opportunity in a learning and challenging environment, improving my skills and knowledge to be the best of my abilities and contribute positively to my personal growth. </p>
            <a href="cv.pdf" download target="blank"> <button>Download CV</button> </a>
             </div>
-        </div>
+        </section>
 
         <footer id="contact">
             <h1>Yaqeen</h1>
